Refatoração geral e renomear conteúdo para textos em português

--- a/assets/sass/_geral.scss
+++ b/assets/sass/_geral.scss
@@ -1,9 +1,9 @@
-/* GERAL ============================== */
+/* GERAL =============== */
 html, body{
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
 
-  background-color: var(--bg-body);
+  background-color: var(--cor-fundo);
   transition: .5s;
 }
 
@@ -13,9 +13,10 @@ a,a:link,a:visited,a:hover,a:active, a:focus{
   font-weight: bold;
   text-decoration: inherit;
   color: inherit;
+  cursor: pointer;
 }
 
-/* Geral: Texto =============== */
+// Textos ==========
 h1, h2, h3,
 h4, h5, h6{
   margin: 0px;
@@ -27,12 +28,12 @@ h4, h5, h6{
   span{
     &:nth-child(1){
       font-weight: 300;
-      color: var(--txt-nv1);
+      color: var(--cor-nivel-1-texto);
     }
 
     &:nth-child(2){
       font-weight: bold;
-      color: var(--txt-base);
+      color: var(--cor-base-texto);
     }
   }
 }
@@ -62,18 +63,18 @@ h4, h5, h6{
 // }
 
 
-/* Geral: HR =============== */
+// HRs ==========
 .hr{
   &-standart{
     width: 100%;
     border: 1px solid;
-    color: var(--txt-nv1);
+    color: var(--cor-nivel-1-texto);
   }
   &-short{
     width: 100px;
     margin: 5px auto 10px;
     border: 3px solid;
-    color: var(--txt-nv2);
+    color: var(--cor-nivel-2-texto);
   }
 }
 // hr{ margin: 0px; }
@@ -86,58 +87,9 @@ h4, h5, h6{
 // }
 
 
-/* Geral: Imagem =============== */
+// Imagens ==========
 .img-profile{
   width: 200px;
   height: auto;
   border-radius: 50%;
-}
-
-
-/* Conteúdo: Box =============== */
-.project{
-  &-title{
-    margin-bottom: 15px;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: var(--txt-base);
-  }
-  &-abstract{
-    margin-bottom: 15px;
-    font-size: 1.15em;
-    color: var(--txt-nv1);
-  }
-  &-link{
-    margin-bottom: 15px;
-    font-size: 1em;
-    font-weight: bold;
-    color: var(--txt-base);
-    &::after{
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: 1;
-      content: "";
-    }
-  }
-}
-
-.webdev{
-  text-align: center;
-
-  &-icon{ color: var(--txt-base); }
-
-  &-title{
-    margin: 15px 0;
-    font-weight: bold;
-    color: var(--txt-base);
-  }
-
-  &-abstract{
-    font-size: 1.15em;
-    color: var(--txt-nv1);
-  }
 }
