--- a/assets/sass/_rodape.scss
+++ b/assets/sass/_rodape.scss
@@ -1,4 +1,4 @@
-/* RODAPÉ ============================== */
+/* RODAPÉ =============== */
 footer{
   padding: 30px 0;
 
@@ -6,7 +6,7 @@ footer{
     font-size: 1em;
     font-weight: normal;
     letter-spacing: .05em;
-    color: var(--txt-nv1);
+    color: var(--cor-nivel-1-texto);
   }
 
   .social{
